# promptimus

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: python-publish.yml
libs/chromadb-store/: pyproject.toml
libs/chromadb-store/src/chromadb_store/: __init__.py  engine.py
libs/dashboard/: pyproject.toml
libs/dashboard/src/dashboard/: __main__.py  client.py  dto.py  erros.py  settings.py  tracer.py
libs/native-storage/: pyproject.toml
libs/native-storage/src/native_storage/: __init__.py  engine.py
libs/phoenix-tracer/: pyproject.toml
libs/phoenix-tracer/src/phoenix_tracer/: tracer.py
libs/tracing/: pyproject.toml
libs/tracing/src/tracing/: __init__.py  dto.py  mediator.py  tracer.py
notebooks/: step_1_1_embedders.ipynb  step_1_llm_provider.ipynb  step_2_prompts_and_modules.ipynb  step_3_prebuit_modules.ipynb  step_4_custom_agent.ipynb  step_5_tracing.ipynb
src/aapo/: __init__.py  dto.py  utils.py
src/aapo/agents/: __init__.py  base.py  llm_agent.py
src/aapo/core/: __init__.py  module.py  parameters.py
src/aapo/data/: __init__.py  base.py  dataset.py
src/aapo/llms/: __init__.py  base.py  ollama.py  openai.py
src/aapo/metrics/: __init__.py  base.py  precision.py  recall.py  semantic_f1.py
src/aapo/optimizer/: default.py  judge.py  optimizer.py  propagator.py
src/promptimus/: __init__.py  dto.py  errors.py  utils.py
src/promptimus/core/: checkpointing.py  module.py  parameters.py
src/promptimus/dto/: __init__.py  message.py  usage.py
src/promptimus/embedders/: __init__.py
src/promptimus/llms/: dummy.py  openai.py
src/promptimus/modules/: __init__.py  memory.py  rag.py  retrieval.py  structural.py  tool.py
src/promptimus/rerankers/: __init__.py  base.py  openai.py  rrf.py
src/promptimus/tracing/: base.py  phoenix.py
src/promptimus/vectore_store/: __init__.py  base.py
tests/: test_chekpointing.py  test_memory_reset.py  test_tabular_dataset.py
tests/fixtures/: sub.toml
