[project]
name = "aapo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrii Korzhuk", email = "korzhukandrew@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.58.1",
    "polars>=1.18.0",
    "pydantic>=2.10.4",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
