[project]
name = "promptimus"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "ailadin", email = "korzhukandrew@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.58.1",
    "pydantic>=2.10.4",
    "tomlkit>=0.13.2",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptimus"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "rich>=13.9.4",
]
