[project]
name = "promptimus"
version = "0.1.1"
readme = "README.md"
authors = [
    { name = "ailadin", email = "korzhukandrew@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "openai>=1.58.1",
    "pydantic>=2.10.4",
    "tomlkit>=0.13.2",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]
dashboard = [
    "dashboard",
]

tracing = [
    "tracing",
]

phoenix-tracer = [
    "phoenix-tracer"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptimus"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pre-commit>=4.2.0",
    "rich>=13.9.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.workspace]
members = [
    "libs/dashboard",
    "libs/tracing",
    "libs/phoenix-tracer",
]

[tool.uv.sources]
dashboard = { workspace = true }
tracing = { workspace = true }
phoenix-tracer = { workspace = true }
