[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ailadin", email = "ailadin@nixos" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "promptimus",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
promptimus = { workspace = true }
