[project]
name = "tracing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ailadin", email = "ailadin@nixos" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
